[package]
name = "k-edit-distance"
version = "1.0.0"
edition = "2024"
description = "A basic edit distance implementation for korean characters"
license = "MIT"
authors = ["Paul Sarda <paul@sarda.dev>"]

[dependencies]
log = "0.4.29"
unicode-normalization = "0.1.25"
unicode-segmentation = { version = "1.12.0", features = ["no_std"] }
